--- a/css/style.css
+++ b/css/style.css
@@ -212,14 +212,13 @@ footer {
 /*menu*/
 menu {
   position: relative;
-  height: 282px;
-
-  background: url("../img/nav_bg.png") no-repeat;
+  height: 60px;
+  background: #003055;
   background-size: contain;
   z-index: 9;
 }
 menu > ul {
-    height: 80px;
+  height: 60px;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
@@ -235,11 +234,11 @@ menu > ul {
   flex: 1;
 }
 .menu .left {
-    text-align: left;
-  }
-  .menu .right {
-    text-align: right;
-  }
+  text-align: left;
+}
+.menu .right {
+  text-align: right;
+}
 .menu li a {
   color: #fff;
   display: block;
@@ -260,15 +259,202 @@ menu > ul {
 }
 
 .banner {
-  height: 360px;
-  transform: translate(0, -215px);
-  position: relative;
+  position: absolute;
+  top: 130px;
+  left: 0;
+  width: 100%;
+  height: 195px;
 }
 .banner img {
   width: 100%;
   position: absolute;
   top: 0;
 }
-.banner .pointer {
+.banner img:first-child {
   z-index: 2;
+}
+
+/* home */
+.main {
+  position: relative;
+  top: 197px;
+}
+.welcome {
+  background-color: #f6f8fa;
+  padding: 90px 0;
+  overflow: hidden;
+}
+.contact_us .title,
+.research .title,
+.welcome .title {
+  font-weight: 700;
+  font-size: 34px;
+  line-height: 46px;
+  text-align: justify;
+  color: #0a497a;
+}
+.welcome .content_box {
+  margin-top: 40px;
+  display: flex;
+  justify-content: space-between;
+}
+.welcome .content_l {
+  width: 70%;
+}
+.welcome .content_r {
+  flex: 1;
+  padding-left: 10px;
+}
+.welcome .cont {
+  margin-top: 20px;
+}
+.welcome .line {
+  width: 300px;
+  height: 3px;
+  margin: 10px 0 10px 0;
+}
+.welcome .cont h6 {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 29px;
+  color: #000000;
+}
+.welcome .cont p {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 30px;
+  letter-spacing: 0px;
+  text-align: justified;
+  color: rgba(0, 0, 0, 0.65);
+}
+.welcome .content_r p {
+  font-size: 15px;
+  font-weight: 700;
+  line-height: 28px;
+  letter-spacing: 0px;
+  text-align: justified;
+  color: rgba(0, 0, 0, 0.65);
+}
+.welcome .quotation_mark_r,
+.welcome .quotation_mark_l {
+  width: 70px;
+  height: 58px;
+}
+.welcome .quotation_mark_r {
+  float: right;
+  margin-top: -20px;
+  margin-bottom: 20px;
+}
+.research {
+  background: url("../img/research.png") no-repeat;
+  background-size: cover;
+  padding: 90px 0;
+}
+.research .wrap_box {
+  display: flex;
+  justify-content: space-between;
+}
+.research .research_l {
+  width: 30%;
+  margin-right: 80px;
+  box-sizing: border-box;
+}
+.research .research_r {
+  flex: 1;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0px 13px 25px 0px #001e3c26;
+}
+.research .research_l p {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 32px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: #00498f;
+  margin: 15px 0;
+  opacity: 0.6;
+}
+.research .research_l a {
+  display: inline-block;
+  color: #00498f;
+  text-decoration: none;
+  padding: 10px 15px;
+  border: 1px solid #00498f;
+}
+.research .research_r img {
+  width: 100%;
+  height: 300px;
+}
+.research .research_r p {
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 28px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: #fff;
+  background: #00498f;
+  padding-left: 20px;
+  position: relative;
+}
+.research .research_r p::before {
+  display: inline-block;
+  content: "";
+  height: 24px;
+  width: 5px;
+  background: #f18d00;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.contact_us {
+  background: url("../img/contact.png") no-repeat;
+  background-size: cover;
+  padding: 90px 0;
+  color: #fff;
+}
+.contact_us .title {
+  color: #fff;
+}
+.contact_us p {
+  padding-top: 20px;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 32px;
+  letter-spacing: 0px;
+  text-align: justified;
+  opacity: 0.85;
+}
+.contact_us .modal {
+  width: 80%;
+  border-radius: 10px;
+  height: 134px;
+  margin: 20px auto 0 auto;
+  background: url("../img/contact_modal.png") no-repeat;
+  background-size: cover;
+  color: #000000;
+  text-align: center;
+  box-shadow: 0px 30px 70px 0px #001D3A33;
+}
+.contact_us .modal p {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 32px;
+  letter-spacing: 0px;
+  text-align: center;
+}
+.contact_us .modal a {
+  font-family: PingFang SC;
+  font-size: 21px;
+  font-weight: 600;
+  line-height: 29px;
+  letter-spacing: 0px;
+  text-align: center;
+  border: 2px solid #00498f;
+  padding: 5px 15px;
+  color: #00498f;
+  text-decoration: none;
+  margin-top: 20px;
+  display: inline-block;
+  border-radius: 5px;
 }
