--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,13 @@ body {
   align-items: center;
   justify-content: space-between;
 }
+.clearfix::after {
+  content: "";
+  display: block;
+  height: 0;
+  visibility: hidden;
+  clear: both;
+}
 /* header */
 header {
   width: 100%;
@@ -255,6 +262,7 @@ menu > ul {
   left: 0;
   width: 100%;
   height: 195px;
+  min-width: 1000px;
 }
 .banner img {
   width: 100%;
@@ -513,10 +521,10 @@ menu > ul {
 .newsList .date {
   width: 108px;
   height: 147px;
-  background: linear-gradient(0deg, #EEEEEE, #EEEEEE);
-  border: 1px solid #EEEEEE;
+  background: linear-gradient(0deg, #eeeeee, #eeeeee);
+  border: 1px solid #eeeeee;
   text-align: center;
-  color: #AAAAAA;
+  color: #aaaaaa;
   font-weight: 700;
   display: flex;
   flex-direction: column;
@@ -529,4 +537,85 @@ menu > ul {
 .newsList .date span:last-child {
   font-size: 16px;
   line-height: 18px;
+}
+
+/* publications */
+.publications {
+  padding: 90px 0;
+  border-left: 1px solid rgba(0, 0, 0, 0.1);
+  /* display: flex; */
+}
+.publications_nav {
+  margin-left: 5px;
+  float: left;
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+  top: 100px;
+  width: 100px;
+}
+.publications_nav li {
+  list-style: none;
+  padding: 5px;
+  padding-left: 20px;
+  border-left: 2px solid transparent;
+}
+.publications_nav li:hover {
+  border-left: 2px solid #00498f;
+}
+.publications_nav li:hover a {
+  color: #00498f;
+  font-size: 22px;
+  line-height: 30px;
+}
+.publications_nav a {
+  font-family: PingFang SC;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-align: left;
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.85);
+}
+.publications .content_list {
+  width: 83%;
+  float: right;
+}
+.publications dl {
+  margin-top: 30px;
+}
+.publications dl:first-child {
+  margin-top: 0;
+}
+.publications dt {
+  background: #f6f8fa;
+  width: 200px;
+  height: 55px;
+  border-radius: 5px;
+  color: #5b5657;
+  line-height: 55px;
+  text-align: center;
+  font-size: 24px;
+  letter-spacing: 2px;
+  font-weight: 600;
+}
+.publications dd {
+  font-family: PingFang SC;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: left;
+  padding: 10px;
+  color: #5B5657;
+}
+.publications dd a{
+  font-family: PingFang SC;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: left;
+  padding: 10px;
+  color: #5B5657;
 }
