--- a/css/style.css
+++ b/css/style.css
@@ -860,7 +860,6 @@ menu > ul {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  font-style: italic;
   margin: 30px 0;
 }
 .people .email {
@@ -948,7 +947,7 @@ menu > ul {
   color: rgba(0, 0, 0, 0.8);
   padding: 15px 0 10px 0;
 }
-.current_member .personal_info {
+.current_member .info {
   width: 40%;
 }
 .current_member .resumeList {
@@ -971,6 +970,7 @@ menu > ul {
   font-weight: 400;
   line-height: 18px;
   letter-spacing: 0px;
+  font-style: italic;
 }
 .current_member .resumeList li::before {
   content: "";
