--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,7 @@ header h2 {
   font-size: 14px;
 }
 .h-right img {
- margin-right: 10px;
+  margin-right: 10px;
 }
 header a {
   color: #fff;
@@ -276,7 +276,6 @@ menu > ul {
 }
 .menu li a {
   color: #fff;
-  display: block;
   transition: font-size 0.25s linear, width 0.25s linear;
   text-decoration: none;
 }
@@ -292,12 +291,50 @@ menu > ul {
   font-size: 18px;
   text-decoration: none;
 }
-.menu li a:hover .list { 
+.menu li .resource {
+  color: #ffffff;
+  padding: 20px 0;
+}
+.menu li .resource:hover .list {
   display: block;
 }
 
 .menu .list {
   display: none;
+  position: absolute;
+  top: 65px;
+  left: -27px;
+  width: 172px;
+  background: rgba(0, 48, 85, 0.8);
+  padding: 10px;
+  box-sizing: border-box;
+}
+.menu .list::before {
+  content: "";
+  position: absolute;
+  top: -10px;
+  left: 77px;
+  border-left: 12px solid transparent; /* 左边透明 */
+  border-right: 12px solid transparent; /* 右边透明 */
+  border-bottom: 15px solid #e9cd79;
+}
+.menu .list a {
+  font-family: PingFang SC;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 22px;
+  letter-spacing: 0px;
+  text-align: center;
+  padding: 10px 0;
+  display: block;
+}
+.menu .list a:hover {
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.menu .resource {
+  position: relative;
 }
 
 .banner {
@@ -971,7 +1008,7 @@ menu > ul {
   border: 1px dashed #729ac1;
   border-radius: 6px;
   padding: 8px 10px;
-  color: #2664A0;
+  color: #2664a0;
   font-size: 13px;
   font-weight: 400;
   line-height: 18px;
