--- a/css/style.css
+++ b/css/style.css
@@ -360,7 +360,7 @@ menu > ul {
   align-items: center;
   margin-bottom: 20px;
 }
-.pagination img{
+.pagination img {
   height: 16px;
   padding: 7px;
   background: #f9f9f9;
@@ -380,7 +380,7 @@ menu > ul {
   color: #666666;
   background: #f9f9f9;
 }
-.p_item:hover{
+.p_item:hover {
   background-color: #0a498f;
   color: #ffffff;
 }
@@ -477,6 +477,7 @@ menu > ul {
 .research .research_r {
   flex: 1;
   border-radius: 10px;
+  box-sizing: border-box;
   overflow: hidden;
   box-shadow: 0px 13px 25px 0px #001e3c26;
 }
@@ -499,7 +500,9 @@ menu > ul {
 }
 .research .research_r img {
   width: 100%;
-  height: 300px;
+  padding: 10px;
+  box-sizing: border-box;
+  background: #fff;
 }
 .research .research_r p {
   font-size: 18px;
@@ -977,7 +980,6 @@ menu > ul {
 .personal_info .biography,
 .personal_info .hobbies {
   margin-top: 30px;
-  opacity: 85%;
   color: #000000;
 }
 .personal_info .biography h6,
@@ -998,7 +1000,7 @@ menu > ul {
   font-weight: 400;
   line-height: 29px;
   letter-spacing: 0em;
-  text-align: justified;
+  text-align: justify;
   opacity: 65%;
 }
 .current_member .title {
