--- a/css/style.css
+++ b/css/style.css
@@ -151,15 +151,20 @@ header h2 {
   letter-spacing: 0px;
   text-align: left;
 }
-.h-left .school {
-  margin-left: 10px;
-  border-left: 1px solid #fff;
-  padding-left: 15px;
+.h-left {
+  position: relative;
+}
+.h-left a {
+  position: absolute;
+    height: 60px;
+}
+.h-left .university {
+    width: 60%;
+  left: 0;
 }
 .h-left .school {
-  font-size: 11px;
-  line-height: 13px;
-  text-decoration: none;
+  right: 0;
+  width: 35%;
 }
 .h-right span {
   margin-top: 8px;
